@@ -30,7 +30,9 @@ import htsjdk.tribble.readers.LineIterator;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 
 
 /**
@@ -95,38 +97,31 @@ public class VCF3Codec extends AbstractVCFCodec {
 
     /**
      * parse the filter string, first checking to see if we already have parsed it in a previous attempt
+     *
      * @param filterString the string to parse
+     * @param filterCache
      * @return a set of the filters applied
      */
     @Override
-    protected List<String> parseFilters(String filterString) {
+    protected List<String> parseFilters(String filterString, final Map<String, List<String>> filterCache) {
 
         // null for unfiltered
-        if ( filterString.equals(VCFConstants.UNFILTERED) )
+        if ( filterString.equals(VCFConstants.UNFILTERED) ) {
             return null;
+        }
 
         // empty set for passes filters
-        List<String> fFields = new ArrayList<String>();
+        if ( filterString.equals(VCFConstants.PASSES_FILTERS_v3) ) {
+            return Collections.emptyList();
+        }
 
-        if ( filterString.equals(VCFConstants.PASSES_FILTERS_v3) )
-            return new ArrayList<String>(fFields);
-
-        if (filterString.isEmpty())
+        if (filterString.isEmpty()) {
             generateException("The VCF specification requires a valid filter status");
+        }
 
-        // do we have the filter string cached?
-        if ( filterHash.containsKey(filterString) )
-            return new ArrayList<String>(filterHash.get(filterString));
-
-        // otherwise we have to parse and cache the value
-        if ( filterString.indexOf(VCFConstants.FILTER_CODE_SEPARATOR) == -1 )
-            fFields.add(filterString);
-        else
-            fFields.addAll(Arrays.asList(filterString.split(VCFConstants.FILTER_CODE_SEPARATOR)));
-
-        filterHash.put(filterString, fFields);
-
-        return fFields;
+        return filterCache.computeIfAbsent(filterString, string -> filterString.contains(VCFConstants.FILTER_CODE_SEPARATOR)
+                ? Arrays.asList(filterString.split(VCFConstants.FILTER_CODE_SEPARATOR))
+                : List.of(filterString));
     }
 
     @Override
